; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_vlc_fourcc_GetFallback.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_vlc_fourcc_GetFallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vlc_fourcc_GetFallback(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @vlc_fourcc_IsYUV(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32* @vlc_fourcc_GetYUVFallback(i32 %7)
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32* @vlc_fourcc_GetRGBFallback(i32 %10)
  br label %12

12:                                               ; preds = %9, %6
  %13 = phi i32* [ %8, %6 ], [ %11, %9 ]
  ret i32* %13
}

declare dso_local i64 @vlc_fourcc_IsYUV(i32) #1

declare dso_local i32* @vlc_fourcc_GetYUVFallback(i32) #1

declare dso_local i32* @vlc_fourcc_GetRGBFallback(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
